--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
+    - name: Checkout
+    - uses: actions/checkout@master
     - name: 创建配置文件 (Costom configure file)
       run: |
         # cd openwrt
@@ -115,7 +117,6 @@ jobs:
         sed -i 's/^[ \t]*//g' .config
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@master
-    - uses: actions/checkout@master
     - name: 上传配置文件
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
