--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: Checkout
-    - uses: actions/checkout@master
+      uses: actions/checkout@master
     - name: 创建配置文件 (Costom configure file)
       run: |
         # cd openwrt
