--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,8 @@ jobs:
       uses: actions/checkout@master
     - name: 创建配置文件 (Costom configure file)
       run: |
-        # cd openwrt
+        mk openwrt
+        cd openwrt
         rm -f ./.config*
         touch ./.config
         # 编译x64固件:
