--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,9 +16,43 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+    - name: 初始化编译环境
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: |
+        echo "正在删除文件,请稍等..."
+        sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d/*
+        sudo swapoff /swapfile
+        sudo rm -f /swapfile
+        #docker rmi `docker images -q`
+        #sudo -E apt-get -q purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
+        curl -fsSL https://raw.githubusercontent.com/P3TERX/dotfiles/master/.bashrc >> ~/.bashrc
+        sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+    - name: 拉取最新源码
+      env: 
+        REPO_URL: https://github.com/coolsnowwolf/lede
+        REPO_BRANCH: master
+      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+
+    - name: 涡轮增雕进程,添加Argon最新版主题
+      run: |
+        sudo rm -rf openwrt/package/lean/luci-theme-argon
+        cd openwrt/package
+        mkdir openwrt-packages
+        cd openwrt-packages
+        git clone https://github.com/jerrykuku/luci-theme-argon.git
+    - name: 更新源(Update feeds)
+      run: cd openwrt && ./scripts/feeds update -a
+
+    - name: 安装源(Install feeds)
+      run: cd openwrt && ./scripts/feeds install -a
     - name: 创建配置文件 (Costom configure file)
       run: |
-        mk openwrt
+        # mk openwrt
         cd openwrt
         rm -f ./.config*
         touch ./.config
