--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -150,6 +150,7 @@ jobs:
         # ========================固件定制部分结束========================
         # 
         sed -i 's/^[ \t]*//g' .config
+        make defconfig
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@master
     - name: 上传配置文件
