--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -151,12 +151,25 @@ jobs:
         # 
         sed -i 's/^[ \t]*//g' .config
         make defconfig
-    - name: SSH connection to Actions
-      uses: P3TERX/debugger-action@master
+#    - name: SSH connection to Actions
+#      uses: P3TERX/debugger-action@master
+      
+    - name: 只打包特定固件
+      run: |
+        rm -rf /artifact/
+        mkdir -p /artifact/
+        find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} /artifact/
+    - name: 上传特定固件
+      uses: actions/upload-artifact@master
+      with:
+        name: X64
+        path: /artifact/
+      
     - name: 上传配置文件
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
         FTP_SERVER: git.caiyy.cn
         FTP_USERNAME: git_caiyy_cn
         FTP_PASSWORD: yangyong1229
-        ARGS: --delete
+        LOCAL_DIR: /artifact/
+        # ARGS: --delete
