--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -165,8 +165,8 @@ jobs:
         make -j$(nproc)
     - name: 只打包特定固件
       run: |
-        rm -rf /artifact/
-        mkdir -p /artifact/
+        sudo rm -rf /artifact/
+        sudo mkdir -p /artifact/
         find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} /artifact/
     - name: 上传特定固件
       uses: actions/upload-artifact@master
@@ -174,7 +174,7 @@ jobs:
         name: X64
         path: /artifact/
       
-    - name: 上传配置文件
+    - name: 上传固件到FTP服务器
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
         FTP_SERVER: git.caiyy.cn
