--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@
 #=================================================
 
 
-name: 编译OpenWrt-X64固件
+name: 编译LEDE-X64固件
 
 on: 
   push:
@@ -97,14 +97,14 @@ jobs:
         CONFIG_PACKAGE_luci-app-smartdns=y
         CONFIG_PACKAGE_luci-app-adbyby-plus=y
         CONFIG_PACKAGE_luci-app-aria2=y
-        CONFIG_PACKAGE_luci-app-baidupcs-web=y
+        # CONFIG_PACKAGE_luci-app-baidupcs-web=y
         # CONFIG_PACKAGE_luci-app-docker=y
         CONFIG_PACKAGE_luci-app-frpc=y
-        CONFIG_PACKAGE_luci-app-kodexplorer=y
+        # CONFIG_PACKAGE_luci-app-kodexplorer=y
         CONFIG_PACKAGE_luci-app-minidlna=y
-        CONFIG_PACKAGE_luci-app-openvpn=y
-        CONFIG_PACKAGE_luci-app-openvpn-server=y
-        CONFIG_PACKAGE_luci-app-qbittorrent=y
+        # CONFIG_PACKAGE_luci-app-openvpn=y
+        # CONFIG_PACKAGE_luci-app-openvpn-server=y
+        # CONFIG_PACKAGE_luci-app-qbittorrent=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
         CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
