--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -174,8 +174,8 @@ jobs:
         make -j1 V=s
     - name: 只打包特定固件
       run: |
-        sudo rm -rf /artifact/
-        sudo mkdir -p /artifact/
+        rm -rf /artifact/
+        mkdir -p /artifact/
         find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} /artifact/
     - name: 上传特定固件
       uses: actions/upload-artifact@master
