--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -174,14 +174,14 @@ jobs:
         make -j1 V=s
     - name: 只打包特定固件
       run: |
-        rm -rf /artifact/
-        mkdir -p /artifact/
-        find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} /artifact/
+        rm -rf ./artifact/
+        mkdir -p ./artifact/
+        find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
     - name: 上传特定固件
       uses: actions/upload-artifact@master
       with:
         name: X64
-        path: /artifact/
+        path: ./artifact/
       
     - name: 上传固件到FTP服务器
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
@@ -189,5 +189,5 @@ jobs:
         FTP_SERVER: git.caiyy.cn
         FTP_USERNAME: git_caiyy_cn
         FTP_PASSWORD: yangyong1229
-        LOCAL_DIR: /artifact/
+        LOCAL_DIR: ./artifact/
         # ARGS: --delete
