--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -145,7 +145,7 @@ jobs:
         EOF
         # LuCI主题:
         cat >> .config <<EOF
-        CONFIG_PACKAGE_luci-theme-netgear=y
+        # CONFIG_PACKAGE_luci-theme-netgear=y
         CONFIG_PACKAGE_luci-theme-argon=y
         EOF
         # 常用软件包:
