--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -194,6 +194,7 @@ jobs:
         rm -rf ./artifact/
         mkdir -p ./artifact/
         find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
+        find ./openwrt/bin/targets/ -name "sha256sums" | xargs -i mv -f {} ./artifact/
     - name: 上传特定固件
       uses: actions/upload-artifact@master
       with:
@@ -209,9 +210,9 @@ jobs:
 #        FTP_PASSWORD: git_caiyy_cn_123
 #        LOCAL_DIR: ./artifact/
         # ARGS: --delete
-    - name: 通知FTP上传完成
-      run: |
-        curl -v -L -G --data-urlencode "appToken=AT_2sglAI5eBgjhGZzXExWT6VoofdrtTdK7" --data-urlencode "uid=UID_OGDvSCXA767nI7nlidREXgxLn2Ow" --data-urlencode "content=固件上传完成!" "http://wxpusher.zjiecode.com/api/send/message/"
+#    - name: 通知FTP上传完成
+#      run: |
+#        curl -v -L -G --data-urlencode "appToken=AT_2sglAI5eBgjhGZzXExWT6VoofdrtTdK7" --data-urlencode "uid=UID_OGDvSCXA767nI7nlidREXgxLn2Ow" --data-urlencode "content=固件上传完成!" "http://wxpusher.zjiecode.com/api/send/message/"
 
     - name: 上传固件到路由器
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
