--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
+    - continue-on-error: true
     - name: 开始工作了
       run: curl -v -L -G --data-urlencode "appToken=AT_2sglAI5eBgjhGZzXExWT6VoofdrtTdK7" --data-urlencode "uid=UID_OGDvSCXA767nI7nlidREXgxLn2Ow" --data-urlencode "content=开始工作了" "http://wxpusher.zjiecode.com/api/send/message/"
     - name: Checkout
@@ -235,9 +236,14 @@ jobs:
         pass: password
         command: |
           cd /tmp/
-          sysupgrade -v openwrt-x86-64-combined-squashfs.img
-    - name: 通知路由器刷机
-      if: failure()
-      run: |
-        curl -v -L -G --data-urlencode "appToken=AT_2sglAI5eBgjhGZzXExWT6VoofdrtTdK7" --data-urlencode "uid=UID_OGDvSCXA767nI7nlidREXgxLn2Ow" --data-urlencode "content=提交刷机任务完成!" "http://wxpusher.zjiecode.com/api/send/message/" 
+          curl -v -L -G --data-urlencode "appToken=AT_2sglAI5eBgjhGZzXExWT6VoofdrtTdK7" --data-urlencode "uid=UID_OGDvSCXA767nI7nlidREXgxLn2Ow" --data-urlencode "content=正在验证固件是否完整.请稍后.." "http://wxpusher.zjiecode.com/api/send/message/" 
+          sha256sum=`grep -A 0 "openwrt-x86-64-combined-squashfs.img" sha256sums`
+          firmware_sha256sum=`sha256sum "openwrt-x86-64-combined-squashfs.img"`
+          sha256sum=${sha256sum/\*/ }
+          if [ "$sha256sum" == "$firmware_sha256sum" ];
+          then
+            echo "caiyy_yes"
+            curl -v -L -G --data-urlencode "appToken=AT_2sglAI5eBgjhGZzXExWT6VoofdrtTdK7" --data-urlencode "uid=UID_OGDvSCXA767nI7nlidREXgxLn2Ow" --data-urlencode "content=固件验证成功,提交刷机任务完成!" "http://wxpusher.zjiecode.com/api/send/message/" 
+            sysupgrade -v openwrt-x86-64-combined-squashfs.img
+          fi
      #cd /tmp/ && wget https://git.caiyy.cn/openwrt-x86-64-combined-squashfs.img && sysupgrade -v openwrt-x86-64-combined-squashfs.img
