--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,25 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@caiyy 
-1
-10caiyy/Lede_FTP_updata
- Code Issues 0 Pull requests 0 Actions Projects 0 Wiki Security Insights Settings
-Lede_FTP_updata/.github/workflows/blank.yml
-@caiyy caiyy Update blank.yml
-5e35ba8 10 minutes ago
-250 lines (241 sloc)  11.8 KB
-  
-#=================================================
-
-#=================================================
-
-
 name: build-lede
 
 on: 
@@ -33,14 +11,14 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: 开始工作了
-      run: curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=开始工作了" "http://wxpusher.zjiecode.com/api/send/message/"
+      run: curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=开始工作了" "http://wxpusher.zjiecode.com/api/send/message/"
     - name: Checkout
       uses: actions/checkout@master
     - name: 初始化编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=正在初始化编译环境." "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=正在初始化编译环境." "http://wxpusher.zjiecode.com/api/send/message/"
         echo "正在删除文件,请稍等..."
         sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d/*
         sudo swapoff /swapfile
@@ -58,20 +36,20 @@ jobs:
         REPO_URL: https://github.com/coolsnowwolf/lede
         REPO_BRANCH: master
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=拉取最新的代码" "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=拉取最新的代码" "http://wxpusher.zjiecode.com/api/send/message/"
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
     - name: 创建第三方插件目录
       run: cd openwrt/package && mkdir openwrt-packages
 
     - name: 删除原Argon主题,添加Argon最新版主题
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=删除原Argon主题,添加Argon最新版主题" "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=删除原Argon主题,添加Argon最新版主题" "http://wxpusher.zjiecode.com/api/send/message/"
         sudo rm -rf openwrt/package/lean/luci-theme-argon
         cd openwrt/package/openwrt-packages
         git clone https://github.com/jerrykuku/luci-theme-argon.git
     - name: 添加Server酱,微信推送插件
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=添加Server酱,微信推送插件" "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=添加Server酱,微信推送插件" "http://wxpusher.zjiecode.com/api/send/message/"
         cd openwrt/package/openwrt-packages && git clone https://github.com/tty228/luci-app-serverchan
       
     - name: 更新源(Update feeds)
@@ -83,7 +61,7 @@ jobs:
         sudo rm -rf openwrt/package/lean/luci-app-verysync
     - name: 创建配置文件 (Costom configure file)
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=正在创建配置文件" "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=正在创建配置文件" "http://wxpusher.zjiecode.com/api/send/message/"
         # mk openwrt
         cd openwrt
         rm -f ./.config*
@@ -193,16 +171,16 @@ jobs:
         find dl -size -1024c -exec rm -f {} \;
     - name: 多线程编译固件
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=正在编译.预计编译时长2小时30分钟.请耐心等待." "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=正在编译.预计编译时长2小时30分钟.请耐心等待." "http://wxpusher.zjiecode.com/api/send/message/"
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc)
     - name: 通知编译完成
-      run: curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=固件编译完成!" "http://wxpusher.zjiecode.com/api/send/message/"
+      run: curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=固件编译完成!" "http://wxpusher.zjiecode.com/api/send/message/"
     - name: 单线程编译固件
       if: failure()
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=多线程编译失败,正在尝试单线程编译." "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=多线程编译失败,正在尝试单线程编译." "http://wxpusher.zjiecode.com/api/send/message/"
         cd openwrt
         make -j1 V=s
     - name: 只打包特定固件
@@ -217,7 +195,7 @@ jobs:
         name: X64
         path: ./artifact/
 #    - name: 通知上传FTP服务器
-#      run: curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=正在上传到FTP服务器!" "http://wxpusher.zjiecode.com/api/send/message/"
+#      run: curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=正在上传到FTP服务器!" "http://wxpusher.zjiecode.com/api/send/message/"
 #    - name: 上传固件到FTP服务器
 #      uses: SamKirkland/FTP-Deploy-Action@2.0.0
 #      env:
@@ -228,51 +206,39 @@ jobs:
         # ARGS: --delete
 #    - name: 通知FTP上传完成
 #      run: |
-#        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=固件上传完成!" "http://wxpusher.zjiecode.com/api/send/message/"
+#        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=固件上传完成!" "http://wxpusher.zjiecode.com/api/send/message/"
 
     - name: 上传固件到路由器
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
-        FTP_SERVER: {{$secrets.router_ip}}
-        PORT: {{$secrets.router_ftp_port}}
-        FTP_USERNAME: {{$secrets.user}}
-        FTP_PASSWORD: {{$secrets.pass}}
+        FTP_SERVER: ${{secrets.router_ip}}
+        PORT: ${{secrets.router_ftp_port}}
+        FTP_USERNAME: ${{secrets.user}}
+        FTP_PASSWORD: ${{secrets.pass}}
         LOCAL_DIR: ./artifact/
         # ARGS: --delete
     - name: 通知路由器固件上传完成
       run: |
-        curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=固件上传到路由器完成!" "http://wxpusher.zjiecode.com/api/send/message/"
+        curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=固件上传到路由器完成!" "http://wxpusher.zjiecode.com/api/send/message/"
     - name: 提交刷机任务
       uses: fifsky/ssh-action@master
       # 步骤出错的时候也继续执行,ps:刷机命令执行的时候,路由器会断开连接,必定出错...
       continue-on-error: true
       with:
-        host: {{$secrets.router_ip}}
-        port: {{$secrets.router_ssh_port}}
-        user: {{$secrets.user}}
-        pass: {{$secrets.pass}}
+        host: ${{secrets.router_ip}}
+        port: ${{secrets.router_ssh_port}}
+        user: ${{secrets.user}}
+        pass: ${{secrets.pass}}
         command: |
           cd /tmp/
-          curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=正在验证固件是否完整.请稍后.." "http://wxpusher.zjiecode.com/api/send/message/" 
+          curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=正在验证固件是否完整.请稍后.." "http://wxpusher.zjiecode.com/api/send/message/" 
           sha256sum=`grep -A 0 "openwrt-x86-64-combined-squashfs.img" sha256sums`
           firmware_sha256sum=`sha256sum "openwrt-x86-64-combined-squashfs.img"`
           sha256sum=${sha256sum/\*/ }
           if [ "$sha256sum" == "$firmware_sha256sum" ];
           then
             echo "caiyy_yes"
-            curl -v -L -G --data-urlencode "appToken={{$secrets.wx_appToken}}" --data-urlencode "uid={{$secrets.uid}}" --data-urlencode "content=固件验证成功,提交刷机任务完成!" "http://wxpusher.zjiecode.com/api/send/message/" 
+            curl -v -L -G --data-urlencode "appToken=${{secrets.wx_appToken}}" --data-urlencode "uid=${{secrets.uid}}" --data-urlencode "content=固件验证成功,提交刷机任务完成!" "http://wxpusher.zjiecode.com/api/send/message/" 
             sysupgrade -v openwrt-x86-64-combined-squashfs.img
           fi
      #cd /tmp/ && wget https://git.caiyy.cn/openwrt-x86-64-combined-squashfs.img && sysupgrade -v openwrt-x86-64-combined-squashfs.img
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
