--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: 
       - master
-  schedule:
-    - cron: 0 16 * * *
+#  schedule:
+#    - cron: 0 16 * * *
 jobs:
   build:
     runs-on: ubuntu-18.04
