--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: build-lede
 on: 
   push:
     branches: 
-      - master
+      - up.config
 #  schedule:
 #    - cron: 0 16 * * *
 jobs:
@@ -155,35 +155,11 @@ jobs:
         # 
         sed -i 's/^[ \t]*//g' .config
         make defconfig
-#    - name: SSH connection to Actions
-#      uses: P3TERX/debugger-action@master
-    - name: 下载固件包(Download package)
-      run: |
-        cd openwrt && make download -j8
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
-    - name: 多线程编译固件
-      run: |
-        cd openwrt
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc)
-    - name: 单线程编译固件
-      if: failure()
-      run: |
-        cd openwrt
-        make -j1 V=s
-    - name: 上传整个bin目录
-      uses: actions/upload-artifact@master
-      if: always()
-      with:
-        name: OpenWrt_bin
-        path: openwrt/bin
     - name: 只打包特定固件
       run: |
         rm -rf ./artifact/
         mkdir -p ./artifact/
-        find ./openwrt/bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
-        find ./openwrt/bin/targets/ -name "sha256sums" | xargs -i mv -f {} ./artifact/
+        find ./openwrt/bin/targets/ -name "." | xargs -i mv -f {} ./artifact/
     - name: 上传特定固件
       uses: actions/upload-artifact@master
       with:
